Move plugin to gradle 9